devops/k8s/prod/proxy/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sos-proxy
  labels:
    name: sos-proxy
